[package]
name = "carrot_robotics"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Robotics application"
authors = ["scepter914 <scepter914@gmail.com>"]
readme = "README.md"

documentation = "https://docs.rs/carrot_robotics"
repository = "https://github.com/scepter914/carrot_robotics"
categories = ["", ""]

[dependencies]
carrot_utils = "0.1.6"
log = "0.4.20"
toml = "0.8.8"
serde_derive = "1.0.195"
serde = "1.0.195"
clap = { version = "4.4.18", features = ["derive"] }
