[package]
name = "carrot_vision"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Vision application"
authors = ["scepter914 <scepter914@gmail.com>"]
readme = "README.md"

documentation = "https://docs.rs/carrot_vision"
repository = "https://github.com/scepter914/carrot_vision"
categories = ["", ""]

[dependencies]
carrot_utils = "0.1.3"
log = "0.4.20"
toml = "0.8.8"
serde_derive = "1.0.195"
serde = "1.0.195"
clap = { version = "4.4.18", features = ["derive"] }
